# organizesite

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DirectoryManager.hpp  FileManager.hpp  Organizer.hpp  structs.hpp
src/: DirectoryManager.cpp  FileManager.cpp
